tests/cases/fail/test_generic_struct_construct.ixc
//@ error: constructing generic struct 'Option' is not supported yet
// Stage 1 cannot instantiate a generic struct yet: constructing one is rejected
// with a clear message (rather than checking values against abstract fields).

struct Option<T> { present: bool, value: T }

@export
proc main() i32 {
    let o: bool = Option { present: true, value: 5 }.present;
    return 0;
}
